--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Mateo Castaño</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,700;1,200;1,900&display=swap"
